--- a/social-app2/Base.lproj/Main.storyboard
+++ b/social-app2/Base.lproj/Main.storyboard
@@ -112,11 +112,27 @@
                     <connections>
                         <outlet property="UserField" destination="55r-jm-B2o" id="H6q-c5-9qP"/>
                         <outlet property="passField" destination="TaL-V4-nLM" id="pHA-al-vc3"/>
+                        <segue destination="k5n-Ny-bkr" kind="show" identifier="goto" id="ebY-M4-LAs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="hGc-sW-TKe">
+            <objects>
+                <viewController id="k5n-Ny-bkr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dnV-8G-u3H">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="r8n-VA-2JW"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j3o-fs-yWQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="778" y="130"/>
         </scene>
     </scenes>
 </document>
